# EvilAudio

./: .gitignore  CMakeLists.txt  StuffToFix.txt
cmake/: EvilAudio.cmake  EvilAudioASIO.cmake  EvilAudioApplicationUtils.cmake  EvilAudioLib.cmake  EvilAudioStaticLibUtils.cmake  EvilAudioUtils.cmake  depricated-EvilAudioStaticLibUtils.cmake
docs/: copilot-instructions.md  setup.md
docs/doxygen/: @CMakeLists.txt  CMakeLists.txt  Doxyfile  juce.tag
libs/: CMakeLists.txt
libs/EvilAudio/: CMakeLists.txt
libs/EvilAudio/EvilStaticLibrary/: CMakeLists.txt
source/: CMakeLists.txt
source/applications/EvilDAW/: CMakeLists.txt  evil_daw_application.cpp  evil_daw_application.h  evil_daw_main.cpp  evil_daw_main.h
source/applications/EvilDAW/application/: evil_daw_application.cpp  evil_daw_application.h  evil_daw_application_info.cpp  evil_daw_application_settings.cpp  evil_daw_application_settings.h
source/applications/EvilDAW/gui/: evil_daw_main_window.cpp  evil_daw_main_window.h  evil_daw_main_window_content.cpp  evil_daw_main_window_content.h
source/applications/EvilDAW/main_window/: evil_daw_main_window.cpp  evil_daw_main_window.h  evil_daw_main_window_content.h  evil_daw_main_window_menu.cpp
source/applications/EvilDAW/windows/main/: evil_daw_main_window_content.cpp
source/applications/EvilEQ/: CMakeLists.txt
source/applications/EvilLookAndFeel/: CMakeLists.txt
source/applications/EvilPluginHost/: CMakeLists.txt  EvilPluginHost.cpp
source/applications/EvilPluginHost/gui/: MainWindowContent.cpp  MainWindowContent.h
source/applications/EvilStaticLibraryClient/: CMakeLists.txt
source/applications/EvilStaticLibraryClient/source/: EvilStaticLibraryClient.cpp
source/libs/: CMakeLists.txt
source/libs/EvilAudio/: CMakeLists.txt
source/libs/EvilDAW/: CMakeLists.txt
source/libs/EvilDAW/application/: evil_daw_application.cpp  evil_daw_application.h  evil_daw_application_menu_model.cpp  evil_daw_application_menu_model.h
source/libs/EvilDAW/commands/: evil_daw_commandIDs.h
source/libs/EvilDAW/settings/editors/: evil_daw_audio_settings_editor.cpp  evil_daw_audio_settings_editor.h
source/libs/EvilDAW/windows/main/: evil_daw_main_window.cpp  evil_daw_main_window.h  evil_daw_main_window_content.h  evil_daw_main_window_menu.h
source/libs/evil_daw_lib/: CMakeLists.txt
source/libs/evil_daw_lib/include/: MainWindowContent.h
source/libs/evil_daw_lib/settings/: evil_daw_appearance_settings.cpp  evil_daw_appearance_settings.h
source/libs/evil_daw_lib/windows/main/: evil_daw_main_window.cpp  evil_daw_main_window.h  evil_daw_main_window_content.cpp
source/modules/: CMakeLists.txt
source/modules/evil_audio_core/: evil_audio_core.cpp  evil_audio_core.h
source/modules/evil_audio_eq/: evil_audio_eq.cpp  evil_audio_eq.h
source/modules/evil_audio_lookandfeel/: evil_audio_lookandfeel.cpp  evil_audio_lookandfeel.h
source/modules/evil_audio_lookandfeel/lookandfeel/: evil_audio_LookAndFeel.cpp
source/modules/evilaudio_audio_devices/: evilaudio_audio_devices.cpp  evilaudio_audio_devices.h
source/modules/evilaudio_core/: evilaudio_core.cpp  evilaudio_core.h
source/modules/evilaudio_eq/: evilaudio_eq.h
source/modules/evilaudio_eq/eq/: ParametricEqualiserProcessor.cpp
source/modules/evilaudio_lookandfeel/: evilaudio_lookandfeel.cpp  evilaudio_lookandfeel.h
source/plugins/EvilEQPlugin/: CMakeLists.txt
